--- a/.env
+++ b/.env
@@ -2,16 +2,16 @@ APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=base64:4M9hbBUPXOAtrrsNX0zmaNAsZqa3MBoOvbmP/UcohCA=
 APP_DEBUG=true
-APP_URL=https://mwconseil.tech
+APP_URL=https://rahmaaccountment.herokuapp.com/
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=mwconsc994.mysql.db
+DB_HOST=db4free.net
 DB_PORT=3306
 DB_DATABASE=rahmabd
-DB_USERNAME=mwconsc994
-DB_PASSWORD=Fouzifouzi2019
+DB_USERNAME=root1998
+DB_PASSWORD=1998project
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
